--- a/index.html
+++ b/index.html
@@ -30,9 +30,19 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="https://github.com/barriosagustin?tab=repositories" target="_blank">GitHub</a></h1>
+      <!-- <h1 class="logo"><a href="https://github.com/barriosagustin?tab=repositories" target="_blank"><img
+            src="assets/img/linkedingimg.svg" alt=""></a></h1> -->
+
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <div class="logos">
+        <a href="https://github.com/barriosagustin?tab=repositories" id="logo1" class="logo" target="_blank"><img
+            src="assets/img/git blue.png" class="img-fluid"></a>
+
+        <a href="https://www.linkedin.com/in/agustin-barrios-/?locale=en_US" id="logo2" class="logo"
+          target="_blank"><img src="assets/img/linkedin blue.png" class="img-fluid"></a>
+      </div>
+
+
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -49,13 +59,13 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/FotoAgus.jpeg)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/test6.jpg)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="hero-title mb-4">I am Agustin Barrios</h1>
+          <h1 class="hero-title mb-4">I am Agustin Barrios<b></h1>
           <p class="hero-subtitle"><span class="typed" data-typed-items="Software developer, Frontend Developer"></span>
           </p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
@@ -77,7 +87,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/agusIMG.jpeg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/FotoAgus (2).jpeg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -130,6 +140,9 @@
       </div>
     </section><!-- End About Section -->
 
+
+    </section><!-- End Portfolio Section -->
+
     <!-- ======= Skills Section ======= -->
     <section id="services" class="portfolio-mf sect-pt4 route">
       <div class="container">
@@ -140,7 +153,8 @@
                 Skills
               </h3>
               <p class="subtitle-a">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                These are some of the technologies I work on professionaly and some of them I use in my personal
+                projects.
               </p>
               <div class="line-mf"></div>
             </div>
@@ -156,27 +170,25 @@
           <img id="devicon-javascript" class="devicon"
             src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
             alt="The logo icon for Angular">
+          <img id="devicon-bootstrap" class="devicon"
+            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original-wordmark.svg"
+            alt="The logo icon for Bootstrap">
           <!-- <img id="devicon-typescript" class="devicon"
             src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg"
             alt="The logo icon for Typescript"> -->
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg" />
           <img id="devicon-angular" class="devicon"
             src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg"
             alt="The logo icon for Angular">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg"
+            alt="The logo icon for react" />
+
           <img id="devicon-jquery" class="devicon"
             src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/jquery/jquery-original-wordmark.svg"
             alt="The logo icon for JQuery">
 
-          <img id="devicon-git" class="devicon"
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original-wordmark.svg"
-            alt="The logo icon for GitHub">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dotnetcore/dotnetcore-original.svg" />
 
-          <img id="devicon-bootstrap" class="devicon"
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original-wordmark.svg"
-            alt="The logo icon for Bootstrap">
-          <img id="devicon-npm" class="devicon"
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg"
-            alt="The logo icon for NPM">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg" />
           <img id="devicon-node" class="devicon"
             src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original-wordmark.svg"
             alt="The logo icon for NodeJS">
@@ -189,9 +201,63 @@
             alt="The logo icon for MSSQL">
         </div>
 
+    </section><!-- End Portfolio Section -->
+    <!-- <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="copyright-box">
+              <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
+            </div>
+          </div>
+        </div>
+    </footer>
+    End  Footer -->
+
+    <!-- ======= Portfolio Section ======= -->
+    <section id="work" class="portfolio-mf sect-pt4 route">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="title-box text-center">
+              <h3 class="title-a">
+                Resume
+              </h3>
+              <p class="subtitle-a">
+                Professional experience
+              </p>
+              <div class="line-mf"></div>
+            </div>
+          </div>
+        </div>
+
+        <!-- TIMELINE SECTION -->
+        <div class="timeline">
+          <div class="outer">
+            <div class="card">
+              <div class="info">
+                <h3 class="title">Full stack Developer</h3>
+                <h4>Cartasur Cards S.A <p class="LocationH4">(Buenos Aires, Argentina)</p>
+                </h4>
+                <h5>February 2022 - Present</h5>
+                <p>Application development and maintenance. The technologies we use are html, css, javascript, c#, .net,
+                  sql, angular, bootstrap, Git, Svn. </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="card">
+              <div class="info">
+                <h3 class="title">Title 2</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                  labore et dolore
+                  magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                  ex ea commodo
+                  consequat. </p>
+              </div>
+            </div> -->
 
 
-        <!-- ======= Portfolio Section ======= -->
         <section id="work" class="portfolio-mf sect-pt4 route">
           <div class="container">
             <div class="row">
@@ -201,7 +267,7 @@
                     Resume
                   </h3>
                   <p class="subtitle-a">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Education
                   </p>
                   <div class="line-mf"></div>
                 </div>
@@ -211,44 +277,45 @@
             <!-- TIMELINE SECTION -->
             <div class="timeline">
               <div class="outer">
-                <div class="card">
+                <!-- <div class="card">
                   <div class="info">
-                    <h3 class="title">Full stack Developer</h3>
+                    <h3 class="title">Bachelor in economics and administration</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                       labore et dolore
-                      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                      aliquip
                       ex ea commodo
                       consequat. </p>
                   </div>
-                </div>
+                </div> -->
                 <div class="card">
                   <div class="info">
-                    <h3 class="title">Title 2</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore
-                      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                      ex ea commodo
-                      consequat. </p>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="info">
-                    <h3 class="title">Title 3</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore
-                      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                      ex ea commodo
-                      consequat. </p>
+                    <h3 class="title">Psychology</h3>
+                    <h4>Universidad de Buenos Aires (UBA)<p class="LocationH4">(Buenos Aires, Argentina)</p>
+                    </h4>
+                    <h5>March 2020 - June 2021</h5>
+                    <p>I completed 1 year of the career Before I started Studying programming.</p>
                   </div>
                 </div>
 
 
 
 
+
+
+
+                <!-- ======= Blog Section ======= -->
         </section><!-- End Portfolio Section -->
-
-
-        <!-- ======= Blog Section ======= -->
+        <footer>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="copyright-box">
+                  <!-- <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p> -->
+                </div>
+              </div>
+            </div>
+        </footer><!-- End  Footer -->
         <section id="blog" class="blog-mf sect-pt4 route">
           <div class="container">
             <div class="row">
