--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
 
       <!-- Uncomment below if you prefer to use an image logo -->
       <div class="logos">
-        <a href="https://github.com/barriosagustin?tab=repositories" id="logo1" class="logo" target="_blank"><img
+        <a href="https://github.com/barriosagustin?tab=repositories" id="logo1" class="github" target="_blank"><img
             src="assets/img/git blue.png" class="img-fluid"></a>
 
-        <a href="https://www.linkedin.com/in/agustin-barrios-/?locale=en_US" id="logo2" class="logo"
+
+        <a href="https://www.linkedin.com/in/agustin-barrios-/?locale=en_US" id="logo2" class="linkedin"
           target="_blank"><img src="assets/img/linkedin blue.png" class="img-fluid"></a>
       </div>
 
@@ -115,21 +116,17 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan
-                      id
-                      imperdiet et, porttitor
-                      at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                      porttitor accumsan tincidunt.
+                      Hi Everyone, I am a Software developer working professionaly, despite of working I am continuously
+                      searching for learning new things, technologies, languages and experiences.
+                      I also study courses to improve my skills or learn new ones.
                     </p>
                     <p class="lead">
-                      Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                      porttitor volutpat. Vestibulum
-                      ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                      I am a courious person i am always looking for growth and achieve goals, I love technology and
+                      enjoy my work day by day.
                     </p>
                     <p class="lead">
-                      Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                      Nulla porttitor accumsan
-                      tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                      I would like to show and share with you a little bit of my experience and projects I have been
+                      working on.
                     </p>
                   </div>
                 </div>
@@ -221,11 +218,11 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                Resume
-              </h3>
-              <p class="subtitle-a">
                 Professional experience
-              </p>
+              </h3>
+              <!-- <p class="subtitle-a">
+                Professional experience
+              </p> -->
               <div class="line-mf"></div>
             </div>
           </div>
@@ -237,7 +234,8 @@
             <div class="card">
               <div class="info">
                 <h3 class="title">Full stack Developer</h3>
-                <h4>Cartasur Cards S.A <p class="LocationH4">(Buenos Aires, Argentina)</p>
+                <h4> <a href="https://www.cartasur.com.ar/" target="_blank"> Cartasur Cards S.A</a>
+                  <p class="LocationH4">(Buenos Aires, Argentina)</p>
                 </h4>
                 <h5>February 2022 - Present</h5>
                 <p>Application development and maintenance. The technologies we use are html, css, javascript, c#, .net,
@@ -264,11 +262,11 @@
               <div class="col-sm-12">
                 <div class="title-box text-center">
                   <h3 class="title-a">
-                    Resume
-                  </h3>
-                  <p class="subtitle-a">
                     Education
-                  </p>
+                  </h3>
+                  <!-- <p class="subtitle-a">
+                    Education
+                  </p> -->
                   <div class="line-mf"></div>
                 </div>
               </div>
@@ -298,24 +296,14 @@
                   </div>
                 </div>
 
-
-
-
-
-
-
-                <!-- ======= Blog Section ======= -->
         </section><!-- End Portfolio Section -->
-        <footer>
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-12">
-                <div class="copyright-box">
-                  <!-- <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p> -->
-                </div>
-              </div>
-            </div>
-        </footer><!-- End  Footer -->
+
+
+
+
+
+
+        <!-- ======= Blog Section ======= -->
         <section id="blog" class="blog-mf sect-pt4 route">
           <div class="container">
             <div class="row">
@@ -325,7 +313,7 @@
                     Portfolio
                   </h3>
                   <p class="subtitle-a">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Projects I've been working on.
                   </p>
                   <div class="line-mf"></div>
                 </div>
