Add new project

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                       I also study courses to improve my skills or learn new ones.
                     </p>
                     <p class="lead">
-                      I am a courious person i am always looking for growth and achieve goals, I love technology and
-                      enjoy my work day by day.
+                      I am a curious person always looking to grow and achieve goals, I love technology and
+                      I enjoy my work day by day
                     </p>
                     <p class="lead">
                       I would like to show and share with you a little bit of my experience and projects I have been
@@ -377,10 +377,30 @@
                     </p>
                   </div>
 
+
+
                 </div>
               </div>
-            </div>
-          </div>
+              <div class="col-md-4">
+                <div class="card card-blog">
+                  <div class="card-img">
+                    <a href="https://barriosagustin.github.io/Sticky-Menu/" target="_blank"><img
+                        src="assets/img/sticky_project.png" alt="" class="img-fluid"></a>
+                  </div>
+                  <div class="card-body">
+                    <div class="card-category-box">
+
+                    </div>
+                    <h3 class="card-title"><a href="https://barriosagustin.github.io/Sticky-Menu/" target="_blank">Start
+                        Up
+                        web page
+                      </a></h3>
+                    <p class="card-description">
+                      Web page using smooth and sticky css properties.
+                    </p>
+                  </div>
+                </div>
+              </div>
         </section><!-- End Blog Section -->
 
 
