new company added

--- a/index.html
+++ b/index.html
@@ -232,11 +232,23 @@
           <div class="outer">
             <div class="card">
               <div class="info">
+                <h3 class="title">Frontend Developer</h3>
+                <h4> <a href="https://expand.com.uy/" target="_blank"> Expand</a>
+                  <p class="LocationH4">(Montevideo, Uruguay)</p>
+                </h4>
+                <h5>July 2023 - Present</h5>
+                •As an Angular Frontend Developer at Expand, I am passionate about creating intuitive and visually appealing user interfaces. With a strong foundation in HTML, CSS, and TypeScript, I collaborate with senior developers to transform design concepts into functional and responsive frontend solutions.
+
+In my role, I actively participate in the development lifecycle, including requirements gathering, coding and testing. I contribute to building scalable and modular Angular components, ensuring adherence to coding standards and best practices. Additionally, I am involved in frontend optimization efforts, striving to enhance performance and user experience.
+              </div>
+            </div>
+            <div class="card">
+              <div class="info">
                 <h3 class="title">Full stack Developer</h3>
                 <h4> <a href="https://www.cartasur.com.ar/" target="_blank"> Cartasur Cards S.A</a>
                   <p class="LocationH4">(Buenos Aires, Argentina)</p>
                 </h4>
-                <h5>February 2022 - Present</h5>
+                <h5>February 2022 - July 2023</h5>
                 <p>Backend: <br>
                   • Application development using C#, SQL Server, and .NET Core. <br>
                   • Creation of stored procedures, triggers, and jobs in SQL Server to implement complex business logic and automate tasks. <br>
