update URL deprecated

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="hero-title mb-4">I am Agustin Barrios<b></h1>
+         <h1><b class="hero-title mb-4">I am Agustin Barrios</b></h1>
           <p class="hero-subtitle"><span class="typed" data-typed-items="Frontend developer"></span>
           </p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
@@ -332,25 +332,48 @@
               </div>
             </div>
             <div class="row">
+
               <div class="col-md-4">
                 <div class="card card-Portfolio">
-                  <div class="card-img" id="web-design">
-                    <a href="https://barriosagustin.github.io/WebDesign/" target="_blank"><img
-                        src="assets/img/Screen_project.png" alt="" class="img-fluid"></a>
+                  <div class="card-img" id="angular-material">
+                    <a href="https://angularmaterialcrud.netlify.app/" target="_blank"><img
+                        src="assets/img/angularmaterial-img.png" alt="" class="img-fluid"></a>
                   </div>
                   <div class="card-body">
                     <div class="card-category-box">
 
                     </div>
-                    <h3 class="card-title"><a href="https://barriosagustin.github.io/WebDesign/" target="_blank">Web
-                        Design project</a></h3>
+                    <h3 class="card-title"><a href="https://angularmaterialcrud.netlify.app/" target="_blank">
+                        CRUD angular material
+                      </a></h3>
                     <p class="card-description">
-                      Simple web page using html,css, javaScript.
+                      Filter,sort and pagination. Fake login, add and edit users.
                     </p>
                   </div>
-
                 </div>
               </div>
+
+              <div class="col-md-4">
+                <div class="card card-Portfolio">
+                  <div class="card-img" id="angular-Ecommerce">
+                    <a href="https://barriosagustin.github.io/angular-ecommerce/home" target="_blank"><img
+                        src="assets/img/angularEcommerce.png" alt="" class="img-fluid"></a>
+                  </div>
+                  <div class="card-body">
+                    <div class="card-category-box">
+
+                    </div>
+                    <h3 class="card-title"><a href="https://barriosagustin.github.io/angular-ecommerce/home" target="_blank">
+                        Angular Ecommerce
+                      </a></h3>
+                    <p class="card-description">
+                      A personal project, store that allows you to add products to cart.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+
               <div class="col-md-4">
                 <div class="card card-Portfolio">
                   <div class="card-img" id="quick-quiz">
@@ -388,11 +411,29 @@
                       Project using REACT that searches images in the API service.
                     </p>
                   </div>
-
-
-
                 </div>
               </div>
+
+                <div class="col-md-4">
+                  <div class="card card-Portfolio">
+                    <div class="card-img" id="web-design">
+                      <a href="https://barriosagustin.github.io/WebDesign/" target="_blank"><img
+                          src="assets/img/Screen_project.png" alt="" class="img-fluid"></a>
+                    </div>
+                    <div class="card-body">
+                      <div class="card-category-box">
+  
+                      </div>
+                      <h3 class="card-title"><a href="https://barriosagustin.github.io/WebDesign/" target="_blank">Web
+                          Design project</a></h3>
+                      <p class="card-description">
+                        Simple web page using html,css, javaScript.
+                      </p>
+                    </div>
+  
+                  </div>
+                </div>
+
               <div class="col-md-4">
                 <div class="card card-Portfolio">
                   <div class="card-img" id="sticky-project">
@@ -409,46 +450,6 @@
                       </a></h3>
                     <p class="card-description">
                       Web page using smooth and sticky css properties.
-                    </p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-4">
-                <div class="card card-Portfolio">
-                  <div class="card-img" id="angular-material">
-                    <a href="https://barriosagustin.github.io/AngularMaterial/login" target="_blank"><img
-                        src="assets/img/angularmaterial-img.png" alt="" class="img-fluid"></a>
-                  </div>
-                  <div class="card-body">
-                    <div class="card-category-box">
-
-                    </div>
-                    <h3 class="card-title"><a href="https://barriosagustin.github.io/AngularMaterial/login" target="_blank">
-                        CRUD angular material
-                      </a></h3>
-                    <p class="card-description">
-                      Filter,sort and pagination. Fake login, add and edit users.
-                    </p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-4">
-                <div class="card card-Portfolio">
-                  <div class="card-img" id="angular-Ecommerce">
-                    <a href="https://barriosagustin.github.io/angular-ecommerce/home" target="_blank"><img
-                        src="assets/img/angularEcommerce.png" alt="" class="img-fluid"></a>
-                  </div>
-                  <div class="card-body">
-                    <div class="card-category-box">
-
-                    </div>
-                    <h3 class="card-title"><a href="https://barriosagustin.github.io/angular-ecommerce/home" target="_blank">
-                        Angular Ecommerce
-                      </a></h3>
-                    <p class="card-description">
-                      A personal project, store that allows you to add products to cart.
                     </p>
                   </div>
                 </div>
