update personal info

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         </p>
                         <p>
                           <span class="title-s">Phone: </span>
-                          <span>+39 347 551 3170</span>
+                          <span>+39 344 475 1605</span>
                         </p>
                         <p>
                           <span class="title-s">Age: </span>
@@ -327,7 +327,9 @@
                 <div class="info">
                   <h3 class="title">Frontend Developer</h3>
                   <h4>
-                    <a href="https://expand.com.uy/" target="_blank"> Expand Omnichannel</a>
+                    <a href="https://expand.com.uy/" target="_blank">
+                      Expand Omnichannel</a
+                    >
                     <p class="LocationH4">(Montevideo, Uruguay)</p>
                   </h4>
                   <h5>July 2023 - Present</h5>
@@ -502,6 +504,35 @@
 
                 <div class="col-md-4">
                   <div class="card card-Portfolio">
+                    <div class="card-img" id="spotify-clone">
+                      <a
+                        href="https://spotify-angular-clone.netlify.app/"
+                        target="_blank"
+                        ><img
+                          src="assets/img/spotify clone.png"
+                          alt="spotify clone"
+                          class="img-fluid"
+                      /></a>
+                    </div>
+                    <div class="card-body">
+                      <div class="card-category-box"></div>
+                      <h3 class="card-title">
+                        <a
+                          href="https://spotify-angular-clone.netlify.app/"
+                          target="_blank"
+                          >Spotify clone
+                        </a>
+                      </h3>
+                      <p class="card-description">
+                        A Spotify clone using Angular and RxJS, featuring
+                        playlists, search, and real-time player updates.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-md-4">
+                  <div class="card card-Portfolio">
                     <div class="card-img" id="quick-quiz">
                       <a
                         href="https://barriosagustin.github.io/Quick-Quiz/"
@@ -523,34 +554,6 @@
                       </h3>
                       <p class="card-description">
                         A mini game made with JavaScript and local storage.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="card card-Portfolio">
-                    <div class="card-img" id="image-finder">
-                      <a
-                        href="https://barriosagustin.github.io/Buscador-de-imagenes/"
-                        target="_blank"
-                        ><img
-                          src="assets/img/Code_img.png"
-                          alt=""
-                          class="img-fluid"
-                      /></a>
-                    </div>
-                    <div class="card-body">
-                      <div class="card-category-box"></div>
-                      <h3 class="card-title">
-                        <a
-                          href="https://barriosagustin.github.io/Buscador-de-imagenes/"
-                          target="_blank"
-                          >image finder
-                        </a>
-                      </h3>
-                      <p class="card-description">
-                        Project using REACT that searches images in the API
-                        service.
                       </p>
                     </div>
                   </div>
